# imageflow

./: .appveyor.yml  .gitignore  .script_travis.sh  .travis.yml  CMakeLists.txt  README.md
cmake/modules/: FindGTest.cmake  OpenCVConfig.cmake
src/: CMakeLists.txt  definitions.hpp  imagepipeline.cpp  imagepipeline.h  main.cpp
src/component/: component.h  icomponentfactory.h  inputcomponentfactory.h  opencvcomponent.cpp  opencvcomponent.h
src/components/: component.h  functor.cpp  icomponent.h  icomponentfactory.cpp  inputcomponentfactory.cpp  inputcomponentfactory.h
src/components/cuda/: cudacomp.cpp  cudacomp.h
src/components/factory/: cudacomponentfactory.cpp  cudacomponentfactory.h  featurecomponentfactory.cpp  featurecomponentfactory.h  icomponentfactory.h  imageproccomponentfactory.cpp  imageproccomponentfactory.h  inputcomponentfactory.cpp  inputcomponentfactory.h  machinelearncomponentfactory.cpp  machinelearncomponentfactory.h  outputcomponentfactory.cpp  outputcomponentfactory.h  plotcomponentfactory.cpp  plotcomponentfactory.h  usercomponentfactory.cpp  usercomponentfactory.h
src/components/feature/: featurecomp.cpp  featurecomp.h
src/components/imageproc/: example.cpp  imageproc.cpp  imageproc.h  imageproccomp.cpp  imageproccomp.h  medianblur.cpp
src/components/input/: imageinputcomp.cpp  inputcomp.cpp  inputcomp.h
src/components/machinelearn/: machinelearncomp.cpp  machinelearncomp.h
src/components/output/: imageshowcomp.cpp  outputcomp.cpp  outputcomp.h
src/components/plot/: plotcomp.cpp  plotcomp.h
src/components/user/: usercomp.cpp  usercomp.h
src/gui/: edge.cpp  edge.h  mainwindow.cpp  mainwindow.h  node.cpp
src/gui/graph/: edge.cpp  edge.h  graphwidget.cpp  graphwidget.h  node.cpp  node.h
src/gui/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/imagepipeline/: imagepipeline.cpp  imagepipeline.h
test/: maintest.cpp
